# cuda-path-tracer

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
.github/workflows/: Ubuntu.yml  Windows.yml
assets/scenes/: ajax-white.json  bunny.json  three_balls.json
assets/shaders/: pass.frag.glsl  pass.vert.glsl
cmake/: CodeCoverage.cmake  StandardProjectSettings.cmake  compiler.cmake  conan.cmake
scripts/actions/: install_cuda_ubuntu.sh  install_cuda_windows.ps1
src/: CMakeLists.txt  app.cpp  app.cu  app.hpp  camera.cpp  camera.hpp  cuda_buffer.hpp  cuda_check.hpp  distributions.cuh  gpu_scene.hpp  gui.cpp  intersections.cuh  kernel.cu  kernel.hpp  main.cpp  mesh.hpp  path_tracer.cu  path_tracer.hpp  preview_renderer.cpp  preview_renderer.hpp  ray.hpp  scene.hpp  scene_builder.hpp  shader.cpp  shader.hpp  span.hpp  sphere.cuh  sphere.hpp  triangle.cuh  triangle.hpp  window.cpp  window.hpp
src/cli/: CMakeLists.txt  cli.cpp  cli.hpp
src/cuda_utils/: 2d_indices.cuh
src/denoising/: edge_avoiding_a_trous_denoiser.cu  edge_avoiding_a_trous_denoiser.hpp
src/interactive-app/: CMakeLists.txt  app.cpp  app.hpp  camera_controller.hpp  first_person_camera_controller.cpp  first_person_camera_controller.hpp  gui.cpp  gui.hpp  main.cpp  preview_renderer.cpp  preview_renderer.hpp  shader.cpp  window.cpp  window.hpp
src/lib/: CMakeLists.txt  aabb.hpp  assets.cpp  camera.cpp  camera.hpp  configurations.cpp  configurations.hpp  constant_memory.cuh  distributions.cuh  hash.cuh  hit_record.hpp  image.cpp  image.hpp  intersection.hpp  intersections.cuh  json.cpp  json.hpp  json_parser.cpp  json_parser.hpp  material.hpp  mesh.cpp  mesh.hpp  options.cpp  options.hpp  path_tracer.cu  path_tracer.hpp  prelude.cpp  prelude.hpp  ray.hpp  ray_gen.cu  ray_gen.cuh  resolution.hpp  scene.hpp  scene_builder.cpp  scene_description.cpp  scene_description.hpp  scene_parser.cpp  scene_parser.hpp  span.hpp  sphere.hpp  (+2 more)
src/lib/accelerators/: bvh.cpp  bvh.hpp
src/lib/assets/: assets.cpp  assets.hpp  json_parser.cpp  json_parser.hpp  model_loader.cpp  model_loader.hpp  scene_parser.cpp  scene_parser.hpp
src/lib/cuda_utils/: 2d_indices.cuh  cuda_buffer.hpp  cuda_check.cpp  cuda_check.hpp  definitions.hpp  indices.cuh
src/lib/denoising/: edge_avoiding_a_trous_denoiser.cu  edge_avoiding_a_trous_denoiser.hpp
test/: CMakeLists.txt  aabb_test.cpp  glm_test_helper.hpp  span_test.cpp  static_stack_test.cpp  transform_test.cpp
